# IECA-extractor

./: .gitignore  .prospector.yaml  README.md  prueba.xml  requirements.txt  setup.cfg  setup.py  tox.ini  traducciones.yaml
.github/workflows/: python-publish.yml  tox-pr.yml  tox-push-main.yml  tox.yml
configuracion/: actividades.yaml  ejecucion.yaml  global.yaml  plantilla_actividad.yaml
docs/: conf.py  index.rst
iecasdmx/: __init__.py  actividad.py  configuracion.yaml  consulta.py  datos.py  embellecedor_metadatos.py  funciones.py  fusionador_consultas.py  jerarquia.py  main.py
iecasdmx/configuracion/: actividades.yaml  ejecucion.yaml  global.yaml  plantilla_actividad.yaml
iecasdmx/ieca/: actividad.py  consulta.py  datos.py  jerarquia.py
iecasdmx/sdmx/: codelist.py  concept_scheme.py  interfaz.py  sdmx.py
iecasdmx/utiles/: translation.json
sistema_informacion/mapas/: D_EDAD_0  D_EPD_GRUPOSEDAD_0  D_ESTADOCIVILC2_0  D_ESTADOCIVIL_0  D_NACIONALIDAD_0  D_SEXOC2_0  D_SEXO_0_COD  D_TERRITORIO_0  D_TERRITORIO_0_COD  D_TERRITORIO_0_backup  INDICATOR  conceptos_codelist.yaml
sistema_informacion/reportes_metadatos/: REPORT_AA.json  REPORT_AID.json  REPORT_CONTPROV.json  REPORT_CRA.json  REPORT_DEFCAU.json  REPORT_DIRECTORIO.json  REPORT_DSN.json  REPORT_ECTA.json  REPORT_EEE.json  REPORT_EOAT.json  REPORT_EOATR.json  REPORT_EOC.json  REPORT_EOH.json  REPORT_EPA.json  REPORT_EPD.json  REPORT_ETCE.json  REPORT_INDICADORES.json  REPORT_IPC.json  REPORT_MCVL.json  REPORT_MNP.json  (+4 more)
src/: __init__.py  main.py
tests/: ejecucion.yaml  global.yaml  test_plantilla.py
(+1228 files in other folders)
